2011-12-10  Helmut Eller  <heller@common-lisp.net>

	* swank-loader.lisp (delete-stale-contrib-fasl-files): New.
	(compile-contribs): Use it.

2011-12-09  Helmut Eller  <heller@common-lisp.net>

	Create an extra thread for the indentation cache.

	* swank.lisp (indentation-cache-loop): New.
	([struct] multithreaded-connection): New slot
	indentation-cache-thread.
	(control-thread, cleanup-connection-threads): Create/kill it.
	(send-to-indentation-cache): New function.
	(update-indentation-information, sync-indentation-to-emacs): Use
	it.
	(perform-indentation-update, update-indentation/delta-for-emacs):
	Add package as argument; that used to be *buffer-package.  Can
	again be simpler as the indentation-cache-thread doesn't share the
	cache with others.
	(handle-indentation-cache-request, symbol-packages): New helpers.

2011-12-07  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*slime-interrupts-enabled*): Describe the idea
	behind the interrupt handlig code a bit.

2011-12-07  Helmut Eller  <heller@common-lisp.net>

	Make *event-queue* and *events-enqueued* slots of the connection
	struct.

	* swank.lisp (*event-queue*, *events-enqueued*): Deleted
	([struct] singlethreaded-connection): New slots event-queue and
	events-enqueued.
	(poll-for-event, send-event, wait-for-event/event-loop): Update
	accordingly.

2011-12-07  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([xemacs]): Use (find-coding-system 'utf-8-unix)
	instead of checking the XEmacs version to decide when 'un-define
	is required.

2011-12-07  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (send-to-emacs): Add a without-slime-interrupts to
	protect send/receive from arbitrary interrupts.

2011-12-07  Helmut Eller  <heller@common-lisp.net>

	Move flow control from dispatch-event to send-to-emacs.

	* swank.lisp (*send-counter*): New thread local variable.
	(with-connection): Bind it.
	(send-to-emacs): Call maybe-slow-down.